# RUST_LEARNING

./: Cargo.toml  README.md  rustfmt.toml
Backend/: style.toml
Backend/src/: main.rs
Backend/src/controllers/auth/: post_sign_in.rs
LeetCode/: Cargo.toml  rustfmt.toml
LeetCode/src/: contains_duplicate.rs  encode_and_decode_tinyurl.rs  group_anagrams.rs  is_valid_parentheses.rs  is_valid_sudoku.rs  longest_consecutive.rs  main.rs  min_stack.rs  product_except_self.rs  reverse_integer.rs  top_k_frequent.rs  two_sum.rs  valid_anagram.rs
ch_1/src/: main.rs
ch_2/: Cargo.toml  hello.text
ch_2/src/: challange-3.rs  challange1.rs  challange2.rs  day1.rs  hashmap.rs  main.rs
ch_2/src/duck/: mod.rs  wild.rs
duck-orm/: Cargo.toml  index.ts  orm.ts
duck-orm/src/: main.rs
exercises/00_intro/: intro1.rs  intro2.rs
exercises/01_variables/: variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs  variables6.rs
exercises/02_functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs
exercises/03_if/: if1.rs  if2.rs  if3.rs
exercises/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs  primitive_types5.rs  primitive_types6.rs
exercises/05_vecs/: c.c  vecs1.rs
reastaurant/: Cargo.toml
reastaurant/src/: lib.rs  main.rs
src/: main.rs
src/controllers/auth/: mod.rs  post_sign_in.rs
src/routes/auth/: mod.rs  sign_in.rs
sys-info/: Cargo.toml  README.md
sys-info/src/: cpu.rs  main.rs  process.rs  ram.rs  utils.rs
(+1 files in other folders)
