[package]
name = "RUST_LEARNING"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.82"
# derive_more = "1.0.0"
json = "0.12.4"
serde = { version= "1.0.209", features= ["derive"] }
surrealdb = "1.5.4"
uuid = "1.10.0"
validator = { version = "0.16.0", features = ["derive"] } 
